<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editMonth"
        android:layout_width="67dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:background="@drawable/frame_style"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintStart_toEndOf="@+id/editYear"
        app:layout_constraintTop_toBottomOf="@+id/users"
        app:layout_constraintVertical_bias="0.208"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editDay"
        android:layout_width="67dp"
        android:layout_height="34dp"
        android:background="@drawable/frame_style"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toEndOf="@+id/editMonth"
        app:layout_constraintTop_toBottomOf="@+id/users"
        app:layout_constraintVertical_bias="0.208"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editYear"
        android:layout_width="67dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/frame_style"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintHorizontal_bias="0.380"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/users"
        app:layout_constraintVertical_bias="0.162"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/firstText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users"
        app:layout_constraintBottom_toTopOf="@+id/users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="94dp"
        android:layout_height="32dp"
        android:background="@drawable/frame_style"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <Spinner
        android:id="@+id/users"
        android:layout_width="127dp"
        android:layout_height="34dp"
        android:background="@drawable/frame_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textYear"
        android:layout_width="18dp"
        android:layout_height="20dp"
        android:text="@string/year"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editMonth"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editYear"
        app:layout_constraintTop_toBottomOf="@+id/users"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/textMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/month"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editDay"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editMonth"
        app:layout_constraintTop_toBottomOf="@+id/users"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editDay"
        app:layout_constraintTop_toBottomOf="@+id/users"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>